# qr-code-exemplo

./: main.py  pyproject.toml
